syntax = "proto3";

package access_v1;

option go_package = "github.com/olezhek28/auth/pkg/access_v1;access_v1";

service AccessV1 {
  rpc Check(CheckRequest) returns (CheckResponse);
}

message CheckRequest {
  string endpoint_address = 1;
}

message CheckResponse {
  bool is_allowed = 1;
}